# tako

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  BENCHMARKS.md  Cargo.toml  DESIGN.md  PERFORMANCE.md  PRODUCT.md  README.md  SPEC.md  channels.go  context7.json  errkit.json  errkit.jsonc  go.mod  go.sum  justfile  package.json  tako.go  tako_test.go
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: http.rs  lib.rs  rpc.rs  runtime.rs  storage.rs  workflow.rs
tako/: Cargo.toml  README.md
tako-channels/: Cargo.toml
tako-channels/src/: client.rs  close_codes.rs  error_codes.rs  lib.rs  params.rs  registry.rs  routing.rs  store.rs  tests.rs  types.rs
tako-channels/src/store/: postgres.rs  sqlite.rs
tako-images/: Cargo.toml  README.md  build.rs
tako-images/src/: lib.rs  source.rs  tests.rs  transform.rs
tako-images/src/tests/: mod.rs  transform.rs
tako-runtime/: Cargo.toml
tako-runtime/src/: download.rs  lib.rs  plugin.rs  types.rs
tako-runtime/src/download/: archive.rs  checksum.rs  github.rs  http.rs  mod.rs  platform.rs  tests.rs
tako-runtime/src/plugins/: go.rs  javascript.rs  mod.rs  rust.rs
tako-server/: Cargo.toml  README.md
tako-server/src/: app_command.rs  archive.rs  boot.rs  channels.rs  channels_ws.rs  container_runtime.rs  defaults.rs  identity.rs  image_worker.rs  isolation.rs  main.rs  management_auth.rs  management_http.rs  object_storage.rs  release.rs  release_command.rs  routing.rs  runtime_events.rs  server_state.rs  socket.rs  startup.rs  state_store.rs  tests.rs  unix.rs  version_manager.rs
tako-server/src/image_worker/: errors.rs  framing.rs  pool.rs  process.rs  protocol.rs  stdio.rs
tako-server/src/instances/: app.rs  config.rs  error.rs  health.rs  instance.rs  logger.rs  manager.rs  mod.rs  network.rs  rolling.rs  tests.rs
tako-server/src/instances/health/: tests.rs
tako-server/src/instances/spawner/: health_probe.rs  mod.rs  readiness.rs  spawn_command.rs  tests.rs
tako-server/src/lb/: mod.rs
tako-server/src/operations/: deploy.rs  dispatch.rs  lifecycle.rs  logs.rs  mod.rs  queries.rs  release_artifacts.rs  releases.rs  secrets.rs  tls.rs
tako-server/src/operations/backup/: encryption.rs  index.rs  mod.rs  s3.rs  scheduler.rs  snapshot.rs
tako-server/src/proxy/: cloudflare_ips.rs  compression.rs  config.rs  limits.rs  mod.rs  observe.rs  proxy_protocol.rs  proxy_protocol_service.rs  request.rs  server.rs  static_files.rs  tests.rs
tako-server/src/proxy/service/: backend.rs  channels.rs  image.rs  mod.rs  static_handler.rs
tako-server/src/proxy/tests/: backend_resolution.rs  cache.rs  core.rs  redirects.rs  responses.rs  source_ip.rs  static_assets.rs
tako-server/src/routing/: tests.rs
tako-server/src/scaling/: idle.rs
tako-server/src/startup/: acme.rs  cloudflare.rs  data_dir.rs  signals.rs  standby.rs  tasks.rs  tests.rs
tako-server/src/state_store/: app_registry.rs  bindings.rs  credentials.rs  device_key.rs  encryption.rs  schema.rs  tests.rs  upgrade.rs
tako-server/src/tests/: archive_boot.rs  delete_upgrade.rs  deploy.rs  lifecycle.rs  mod.rs  release_command.rs  scale_limits.rs  secrets_restore.rs  workflows.rs
tako-server/src/tls/: acme.rs  cloudflare.rs  dns.rs  manager.rs  mod.rs  self_signed.rs  sni.rs
tako-server/src/tls/acme/: tests.rs
tako-server/src/tls/manager/: tests.rs
tako-server/tests/: e2e.rs  image_worker.rs  rolling_update_integration.rs  server_integration.rs
tako-server/tests/server_integration/: channels.rs  health_check.rs  instance_management.rs  localhost_bind.rs  protocol.rs  server_info.rs
tako-server/tests/support/: mod.rs
tako-workflows/: Cargo.toml
tako-workflows/src/: cron.rs  dispatcher.rs  enqueue.rs  enqueue_socket.rs  lib.rs  manager.rs  postgres_store.rs  schema.rs  supervisor.rs
tako-workflows/src/enqueue/: sqlite.rs  tests.rs
tako-workflows/src/enqueue_socket/: tests.rs
tako-workflows/src/supervisor/: tests.rs
tako/src/: cli.rs  cloudflare.rs  dev_server_client.rs  github.rs  keychain.rs  main.rs  management_http.rs  paths.rs  tailscale.rs  ui.rs
tako/src/cli/: tests.rs
tako/src/cli/tests/: backups.rs  credentials.rs  deploy.rs  dev.rs  general.rs  secrets.rs  servers.rs  storages.rs
tako/src/commands/: backups.rs  codegen.rs  credentials.rs  delete.rs  dns.rs  doctor.rs  helpers.rs  implode.rs  log_style.rs  logs.rs  mod.rs  releases.rs  run.rs  scale.rs  secret.rs  storage.rs
tako/src/commands/backups/: client.rs  display.rs  download.rs  mod.rs  target.rs
tako/src/commands/delete/: tests.rs
tako/src/commands/deploy/: artifacts.rs  config.rs  format.rs  manifest.rs  mod.rs  preflight.rs  project.rs  release_resolution_tests.rs  remote.rs  task_tree.rs  tests.rs
tako/src/commands/dev/: client.rs  mod.rs  output.rs  output_render.rs  project.rs  runner.rs  tests.rs  types.rs  watcher.rs
tako/src/commands/doctor/: common.rs  linux.rs  macos.rs  tests.rs
tako/src/commands/implode/: server.rs  system.rs  tests.rs
tako/src/commands/init/: dns.rs  generated.rs  mod.rs  non_interactive.rs  scaffold.rs  ssl.rs  tests.rs  wizard.rs
tako/src/commands/logs/: json.rs  remote.rs  render.rs
tako/src/commands/secret/: key.rs  sync.rs  tests.rs
tako/src/commands/server/: configure.rs  crud.rs  dns.rs  first_run.rs  mod.rs  remote_config.rs  trusted_proxy.rs  wizard.rs
tako/src/config/: merged.rs  mod.rs  secrets.rs  servers_toml.rs  storages.rs
tako/src/crypto/: secrets.rs
tako/src/dev/: ca.rs
tako/src/dev_server_client/: apps.rs  commands.rs  connection.rs  daemon.rs  events.rs  tests.rs
tako/src/management_http/: auth.rs
tako/src/output/: mod.rs  tests.rs
tako/src/ssh/: client.rs  error.rs  mod.rs
tako/src/ui/: render.rs  session.rs  tests.rs
tako/src/validation/: config.rs  dns.rs  mod.rs  routes.rs  secrets.rs  ssl.rs  storages.rs
tako/tests/: cli_integration.rs
tako/tests/cli_integration/: deploy_command.rs  dev_daemon_commands.rs  help_and_version.rs  init.rs  output_modes.rs  run_command.rs  secret_commands.rs  server_commands.rs  status_command.rs  support.rs  uninstall_commands.rs
(+536 files in other folders)
