[workspace]
resolver = "3"
members = [
  "tako-core",
  "tako-socket",
  "tako-sqlite",
  "tako-runtime",
  "tako-channels",
  "tako",
  "tako-server",
  "tako-spawn",
  "tako-workflows",
  "tako-images",
  "sdk/rust",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.5"
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.53", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.7", features = ["fs", "trace"] }
tower = "0.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
turso = { version = "0.7.0", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
