[package]
name = "tako-channels"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
jsonschema = { version = "0.48.1", default-features = false }
parking_lot = "0.12"
percent-encoding = "2.3"
postgres = "0.19"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tako-sqlite = { path = "../tako-sqlite" }
thiserror = "2"
turso.workspace = true

[dev-dependencies]
tempfile = "=3.27.0"
