[package]
name = "tako-runtime"
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
sha2 = "0.11"
hex = "0.4"
tar = "0.4"
flate2 = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.53", features = ["rt", "macros"] }
