[package]
name = "tako-server"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "tako-server"
path = "src/main.rs"

[dependencies]
tako-channels = { path = "../tako-channels" }
tako-core = { path = "../tako-core" }
tako-images = { path = "../tako-images" }
tako-runtime = { path = "../tako-runtime" }
tako-socket = { path = "../tako-socket" }
tako-spawn = { path = "../tako-spawn" }
tako-workflows = { path = "../tako-workflows" }
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.53", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
pingora-core = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-http = "0.8"
pingora-cache = "0.8"
openssl.workspace = true
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2.0"
dashmap = "6.2"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
rcgen = "0.14"
instant-acme = "0.8"
x509-parser = "0.18"
base64 = "0.22"
brotli = "8.0"
rustls = "0.23"
libc = "0.2"
tar = "0.4"
flate2 = "1.1"
zstd = "0.13"
nanoid = "0.5"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1.10", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
mimalloc = "0.1"
percent-encoding = "2"
prometheus = "0.14"
hostname = "0.4"
sha2 = "0.11"
hex = "0.4"
time = "0.3"
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
ipnet = "2.12"
socket2 = "0.6"

[dev-dependencies]
filetime = "0.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
tempfile = "3.27"
