[package]
name = "tako-workflows"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
tako-core = { path = "../tako-core" }
tako-socket = { path = "../tako-socket" }
tako-spawn = { path = "../tako-spawn" }
tokio.workspace = true
tracing = "0.1"
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
postgres = "0.19"
tako-sqlite = { path = "../tako-sqlite" }
turso.workspace = true
nanoid = "0.5"
cron = "0.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"

[dev-dependencies]
tempfile = "=3.27.0"
