[package]
name = "tako"
version = "0.0.0"
edition.workspace = true
publish = false
repository = "https://github.com/lilienblum/tako"

[[bin]]
name = "tako"
path = "src/main.rs"

[[bin]]
name = "tako-dev-server"
path = "src/bin/tako-dev-server/main.rs"

[[bin]]
name = "tako-dev-proxy"
path = "src/bin/tako-dev-proxy/main.rs"

[dependencies]
tako-channels = { path = "../tako-channels" }
tako-core = { path = "../tako-core" }
tako-images = { path = "../tako-images" }
tako-runtime = { path = "../tako-runtime" }
tako-socket = { path = "../tako-socket" }
tako-spawn = { path = "../tako-spawn" }
tako-workflows = { path = "../tako-workflows" }
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
ctrlc.workspace = true
console = "0.16"
indicatif = "0.18"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
sysinfo = "0.39"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
thiserror = "2.0"
dirs = "6.0"
bytes = "1"
ipnet = "2.11"

# File watching
notify = "8.2"
notify-debouncer-mini = "0.7"

# HTTP proxy/server
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
openssl.workspace = true
pingora-core = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-proxy = { version = "0.8", default-features = false, features = ["openssl"] }
pingora-http = "0.8"
hickory-proto = "0.26.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

# HTTP client for proxying
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }

# SSH client
russh = "0.60"
russh-sftp = "2.1"
ssh-key = "0.6"
async-trait = "0.1"

# Certificate generation for local CA
rcgen = { version = "0.14", features = ["pem"] }
x509-parser = "0.18"
time = { version = "0.3", features = ["local-offset"] }
pem = "3.0"

# Build system (archiving)
zstd = "0.13"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
ignore = "0.4"
tempfile = "3.27"

# Encryption for secrets
aes-gcm = "0.10"
getrandom = "0.4"
pbkdf2 = { version = "0.13", features = ["sha2"] }
libc = "0.2"

# SQLite state store for dev-server
rusqlite = { version = "0.39", features = ["bundled"] }

# QR code generation for LAN mode CA cert URL
qrcode = { version = "0.14", default-features = false }

# macOS: inspect trust settings and evaluate trust via Security.framework
# so local HTTPS checks match browser trust behavior without shelling out.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.7", features = ["OSX_10_15"] }


[dev-dependencies]
rand = { version = "0.10", features = ["thread_rng"] }
