[package]
name = "tako"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "tako"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tempfile = "3"
