[package]
name = "tako"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Rust SDK for tako.sh apps"

[features]
default = []
tokio = ["dep:tokio"]
axum = ["tokio", "dep:axum"]

[dependencies]
axum = { version = "0.8", optional = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
