[package]
name = "tako"
version = "0.2.1"
edition.workspace = true
license = "MIT"
description = "Official Rust SDK for Tako applications"
homepage = "https://tako.sh"
repository = "https://github.com/tako-sh/tako"
documentation = "https://docs.rs/tako"

[features]
default = []
tokio = ["dep:tokio"]
axum = ["tokio", "dep:axum"]

[dependencies]
axum = { version = "0.8", optional = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
